RESOLVED FIXED312709
Parse errors in workers should be reported to the parent
https://bugs.webkit.org/show_bug.cgi?id=312709
Summary Parse errors in workers should be reported to the parent
Anne van Kesteren
Reported 2026-04-18 23:38:09 PDT
.
Attachments
Anne van Kesteren
Comment 1 2026-04-18 23:42:27 PDT
Radar WebKit Bug Importer
Comment 2 2026-04-25 23:39:12 PDT
EWS
Comment 3 2026-05-06 09:29:13 PDT
Committed 312701@main (5f69c9c98e09): <https://commits.webkit.org/312701@main> Reviewed commits have been landed. Closing PR #63061 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.