Parse errors in workers should be reported to the parent https://bugs.webkit.org/show_bug.cgi?id=312709

Reviewed by Chris Dumez and Keith Miller.

Per the specification we should report script parse errors to the
Worker or SharedWorker object:
https://html.spec.whatwg.org/multipage/workers.html#run-a-worker has a
step that deals with "error to rethrow" which is initialized in
https://html.spec.whatwg.org/multipage/webappapis.html#creating-a-classic-script
with the result of ECMAScript's ParseScript.

Runtime errors however should only go to
the Worker object as detailed here:
https://html.spec.whatwg.org/multipage/webappapis.html#report-an-exception

This mostly matches Gecko. Although the risk should be minimal, we
preference-gate it behind WorkerParseErrorReportingEnabled just in
case.

Tests: imported/w3c/web-platform-tests/workers/dedicated-worker-runtime-error-is-not-parse-error.html
       imported/w3c/web-platform-tests/workers/shared-worker-runtime-error-is-not-parse-error.html

Upstream: https://github.com/web-platform-tests/wpt/pull/59652
Canonical link: https://commits.webkit.org/312701@main